test/pass/sample_test_dep/src/Main.sest
module Main :> sig
  val f : fun() -> int
end = struct

  val f() =
    42 + 57

end
