test/fail/error_freeze.sest
module ErrorFreeze = struct

  val g() =
    let f(x) = x in
    freeze f(42)

end
